--- a/view/estadisticas_view.mustache
+++ b/view/estadisticas_view.mustache
@@ -37,9 +37,9 @@
     <a href="/tpFinal/administrador/statsPreguntas"
        class="border border-solid border-gray-500 w-32 p-2 mx-2 hover:bg-gray-500 hover:text-white duration-200 text-center">PREGUNTAS
     </a>
-    <a href="#"
-       class="border border-solid border-gray-500 w-32 p-2 mx-2 hover:bg-gray-500 hover:text-white duration-200 text-center">BOTON
-        ESTADISTICA
+    <a href="/tpFinal/administrador/jugadoresPorSexo"
+       class="border border-solid border-gray-500 w-32 p-2 mx-2 hover:bg-gray-500 hover:text-white duration-200 text-center">
+        JUGADORES POR SEXO
     </a>
     <a href="#"
        class="border border-solid border-gray-500 w-32 p-2 mx-2 hover:bg-gray-500 hover:text-white duration-200 text-center">BOTON
