--- a/view/formRegistro_view.mustache
+++ b/view/formRegistro_view.mustache
@@ -84,13 +84,15 @@
                         <label class="block mb-2 text-sm font-bold text-gray-700" for="sexo">
                             Sexo
                         </label>
-                        <input
+                        <select
                                 class="w-full px-3 py-2 mb-3 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
-                                id="sexo" name="sexo"
-                                type="text"
-                                placeholder="Sexo"
-                                value="{{datos.sexo}}"
-                        />
+                                id="sexo"
+                                name="sexo"
+                        >
+                            <option value="M" >M</option>
+                            <option value="F" >F</option>
+                            <option value="Otro">Otro</option>
+                        </select>
                         <span class="text-sm bg-red-200 text-red-800">{{errores.errorSexo}}</span>
                     </div>
                     <div class="w-full md:w-1/2 md:ml-2">
