--- a/view/estadisticas_view.mustache
+++ b/view/estadisticas_view.mustache
@@ -37,12 +37,10 @@
     <a href="/tpFinal/administrador/statsPreguntas"
        class="border border-solid border-gray-500 w-32 h-16 p-2 mx-2 hover:bg-gray-500 hover:text-white duration-200 flex justify-center items-center text-center">PREGUNTAS
     </a>
-    <a href="#"
-       class="border border-solid border-gray-500 w-32 h-16 p-2 mx-2 hover:bg-gray-500 hover:text-white duration-200 flex justify-center items-center text-center">BOTON
-        ESTADISTICA
+    <a href="/tpFinal/administrador/cantPartidasJugadas"
+       class="border border-solid border-gray-500 w-32 h-16 p-2 mx-2 hover:bg-gray-500 hover:text-white duration-200 flex justify-center items-center text-center">PARTIDAS JUGADAS
     </a>
-    <a href="#"
-       class="border border-solid border-gray-500 w-32 h-16 p-2 mx-2 hover:bg-gray-500 hover:text-white duration-200 flex justify-center items-center text-center">BOTON
-        ESTADISTICA
+    <a href="/tpFinal/administrador/cantUsuariosEdad"
+       class="border border-solid border-gray-500 w-32 h-16 p-2 mx-2 hover:bg-gray-500 hover:text-white duration-200 flex justify-center items-center text-center">USUARIOS POR EDAD
     </a>
 </div>
