Ya funciona la estadistica de grupos por edad
Ya funciona grupos por edad

--- a/view/usuariosEdad_view.mustache
+++ b/view/usuariosEdad_view.mustache
@@ -164,7 +164,7 @@
         {{/filtroMes}}
 
         {{#filtroAnio}}
-            titulo_grafico.innerText = 'Usuarios por grupo de edad por anio.';
+            titulo_grafico.innerText = 'Usuarios por grupo de edad por año.';
             data.addColumn('number', 'Año');
             data.addColumn('number', 'Menores');
             data.addColumn('number', 'Medios');
