--- a/view/estadisticas_view.mustache
+++ b/view/estadisticas_view.mustache
@@ -43,4 +43,7 @@
     <a href="/tpFinal/administrador/cantUsuariosEdad"
        class="border border-solid border-gray-500 w-32 h-16 p-2 mx-2 hover:bg-gray-500 hover:text-white duration-200 flex justify-center items-center text-center">USUARIOS POR EDAD
     </a>
+    <a href="/tpFinal/administrador/cantUsuariosSexo"
+       class="border border-solid border-gray-500 w-32 h-16 p-2 mx-2 hover:bg-gray-500 hover:text-white duration-200 flex justify-center items-center text-center">USUARIOS POR SEXO
+    </a>
 </div>
