--- a/view/pregunta_view.mustache
+++ b/view/pregunta_view.mustache
@@ -109,7 +109,7 @@
                         '<p class="text-xl mb-4">Tiempo agotado.</p>' +
                         '<div class="my-10 text-center">' +
                         '<p class="text-2xl text-purple-700">Puntaje final:</p>' +
-                        '<p class="text-6xl font-bold text-purple-500">' + totalJson.total + '</p>' +
+                        '<p class="text-6xl font-bold text-purple-500">' + totalJson + '</p>' +
                         '</div>' +
                         '<div class="flex justify-center space-x-4">' +
                         '<a href="/tpFinal/partida/pregunta" class="bg-purple-500 neon-border hover:bg-purple-600 text-white px-6 py-3 rounded-md font-medium">Jugar de nuevo</a>' +
