--- a/view/partial/header.mustache
+++ b/view/partial/header.mustache
@@ -12,5 +12,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/f46e1e1d56.js" crossorigin="anonymous"></script>
     <script src="/TpFinal/public/js/jquery-3.7.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
 </head>
 <body class="antialiased text-gray-700 bg-gray-100">
