--- a/view/usuariosEdad_view.mustache
+++ b/view/usuariosEdad_view.mustache
@@ -40,7 +40,7 @@
 </nav>
 <div class="mx-8 my-2">
     <p class="my-2 text-xl font-semi-bold">USUARIOS POR GRUPO DE EDAD</p>
-    <form action="/tpFinal/administrador/cantUsuariosEdad" method="GET" class="flex items-center">
+    <form id="primerFormulario" action="/tpFinal/administrador/cantUsuariosEdad" method="GET" class="flex items-center">
         <select name="filtro" class="border border-solid border-gray-500 w-36 p-2 mx-2 focus:outline-none">
             <option value="dia" {{#filtroDia}}selected{{/filtroDia}}>Día</option>
             <option value="semana" {{#filtroSemana}}selected{{/filtroSemana}}>Semana</option>
@@ -56,9 +56,24 @@
 <div class="flex flex-col items-center justify-center">
     <h1 id="chart_title" class="text-3xl"></h1>
     <div id="chart_div" class="flex justify-center my-3"></div>
+    <form  id="segundoFormulario" action="/tpFinal/administrador/convertirAPdfUsuariosPorEdad" method="GET" class="flex items-center">
+        <input type="hidden" name="filtro">
+        <button type="button" onclick="submitPdfForm()">Hacer PDF</button>
+    </form>
 </div>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script type="text/javascript">
+
+    function submitPdfForm() {
+        // Obtener el valor seleccionado del primer formulario
+        const filtro = document.querySelector('#primerFormulario select[name="filtro"]').value;
+
+        document.querySelector('#segundoFormulario input[name="filtro"]').value = filtro;
+
+        // Enviar el segundo formulario
+        document.querySelector('#segundoFormulario').submit();
+    }
+
     google.charts.load('current', {packages: ['corechart']});
     google.charts.setOnLoadCallback(drawChart);
 
