Arreglo los gráficos de statsPreguntas porque no visualizaba correctamente. Modifiqué la BD con preguntas en estado sugerido para que se pueda apreciar el gráfico. Acomodé el botón de generar pdf en cada vista de gráfico.

--- a/view/lobby_view.mustache
+++ b/view/lobby_view.mustache
@@ -14,7 +14,7 @@
                     <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/sidebar2-svg1.svg" alt="logo">
                     <p class="text-2xl leading-6 text-white">Quiz Time</p>
                 </div>
-                <div class="h-1/2 flex flex-col sm:flex-row lg:flex-col justify-center items-center p-6 border-b border-gray-600 w-full">
+                <div class="h-1/2 flex flex-col md:flex-row lg:flex-col justify-center items-center pt-4 lg:pb-12 border-b border-gray-600 w-full">
                     <a href="/tpFinal/partida/pregunta"
                        class="flex justify-center lg:justify-start items-center hover:text-white text-center lg:text-start focus:bg-gray-700 focus:text-white text-gray-400 rounded px-3 py-2 w-full lg:w-52">
                         <i class="mx-2 sm:mx-1 lg:w-1/5 text-center fa-solid fa-plus"></i>
