--- a/view/statsPreguntas_view.mustache
+++ b/view/statsPreguntas_view.mustache
@@ -59,24 +59,48 @@
         {{#filtroMes}}MES{{/filtroMes}}
         {{#filtroSemana}}SEMANA{{/filtroSemana}}
         {{#filtroDia}}DIA{{/filtroDia}}</h1>
-    <div id="grafico" style="width: 500px; height: 400px;"></div>
+    <div id="chart_div" class="my-4"></div>
+    <button id="generar_pdf_btn" type="button"
+            class="border border-solid border-gray-500 w-24 p-2 mx-2 hover:bg-gray-500 hover:text-white duration-200">
+        Generar PDF
+    </button>
 </div>
 
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script type="text/javascript">
+    var cantPreguntasActivas = {{cantPreguntasActivas}};
+    var cantPreguntasSugeridas = {{cantPreguntasSugeridas}};
     google.charts.load('current', {'packages': ['corechart']});
     google.charts.setOnLoadCallback(drawChart);
 
     function drawChart() {
-        var data = google.visualization.arrayToDataTable([
-            ['Categoría', 'Valor'],
-            ['Preguntas en el juego', {{cantPreguntasActivas}}],
-            ['Preguntas creadas',{{cantPreguntasSugeridas}}],
+        var data = new google.visualization.DataTable();
+        data.addColumn('string', 'Preguntas');
+        data.addColumn('number', 'Cantidad');
+
+        data.addRows([
+            ['Preguntas activas', cantPreguntasActivas],
+            ['Preguntas sugeridas', cantPreguntasSugeridas]
         ]);
 
-        var chart = new google.visualization.PieChart(document.getElementById('grafico'));
-        chart.draw(data);
+        var options = {
+            pieHole: 0.3,
+            legend: {position: 'bottom'},
+            width: Math.floor(window.innerWidth * 0.5),
+            height: 400,
+        };
+
+        var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
+        chart.draw(data, options);
     }
+
+    document.getElementById('generar_pdf_btn').addEventListener('click', function () {
+        var chartDiv = document.getElementById('chart_div');
+
+        html2pdf()
+                .from(chartDiv)
+                .save('grafico.pdf');
+    });
 </script>
 
 </body>
