--- a/view/usuariosEdad_view.mustache
+++ b/view/usuariosEdad_view.mustache
@@ -56,12 +56,11 @@
 <div class="flex flex-col items-center justify-center">
     <h1 id="chart_title" class="text-3xl"></h1>
     <div id="chart_div" class="flex justify-center my-3"></div>
+    <button id="generar_pdf_btn" type="button"
+            class="border border-solid border-gray-500 w-24 p-2 mx-2 hover:bg-gray-500 hover:text-white duration-200">
+        Generar PDF
+    </button>
 </div>
-
-<button id="generar_pdf_btn" type="button" class="border border-solid border-gray-500 w-24 p-2 mx-2 hover:bg-gray-500 hover:text-white duration-200">
-    Generar PDF
-</button>
-
 
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script type="text/javascript">
@@ -184,7 +183,8 @@
                 data.addRow([anios[i],
                     cantidadUsuariosTotalParsed[i].menores,
                     cantidadUsuariosTotalParsed[i].medios,
-                    cantidadUsuariosTotalParsed[i].jubilados]);;
+                    cantidadUsuariosTotalParsed[i].jubilados]);
+                ;
             }
         {{/filtroAnio}}
 
@@ -193,7 +193,7 @@
         let options = {
             curveType: 'function',
             legend: {position: 'bottom'},
-            width: Math.floor(window.innerWidth * 0.95),
+            width: Math.floor(window.innerWidth * 0.5),
             height: 400,
             hAxis: {
                 format: '0'
@@ -207,7 +207,8 @@
 
         chart.draw(data, options);
     }
-    document.getElementById('generar_pdf_btn').addEventListener('click', function() {
+
+    document.getElementById('generar_pdf_btn').addEventListener('click', function () {
         var chartDiv = document.getElementById('chart_div');
 
         html2pdf()
